--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "3.15.1",
+    "antd": "^4.21.0",
+    "axios": "^0.27.2",
     "next": "12.1.6",
+    "next-auth": "^4.4.0",
+    "next-connect": "^0.12.2",
+    "prisma": "^3.15.1",
+    "prop-types": "^15.8.1",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "sass": "^1.52.3",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "eslint": "8.17.0",
