ADD: Functional add work experience

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 # DATABASE
-DATABASE_URL="postgres://kiwlriki:7P3gva8AUYosBM8TuKI3NFu6FGJqPlDS@rosie.db.elephantsql.com/kiwlriki"
+# DATABASE_URL="postgres://kiwlriki:X9x5l_nvOIwPoayrX20eM-1BUKsaIWzh@rosie.db.elephantsql.com/kiwlriki"
+DATABASE_URL="mysql://root:root@localhost:3306/db_test"
+
 
 # AUTHENTICATION
 NEXTAUTH_URL="http://localhost:3000/api/auth"
