UPDATE: Database settings

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # DATABASE
-# DATABASE_URL="postgres://kiwlriki:X9x5l_nvOIwPoayrX20eM-1BUKsaIWzh@rosie.db.elephantsql.com/kiwlriki"
-DATABASE_URL="mysql://root:root@localhost:3306/db_test"
+DATABASE_URL="postgres://postgres:mypassword@db-testing.cugapxw0dklk.ap-southeast-1.rds.amazonaws.com/db_testing"
 
 
 # AUTHENTICATION
